src/objects/Contact_Us_Language__c.object
<CustomObject>
    <fields>
        <fullName>Question__c</fullName>
        <description>Label used for questions in the case summary.</description>
        <inlineHelpText>Label used for questions in the case summary.</inlineHelpText>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_1__c</fullName>
        <inlineHelpText>Testimonial</inlineHelpText>
        <label>Reason 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_2__c</fullName>
        <inlineHelpText>Inquiry</inlineHelpText>
        <label>Reason 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_3__c</fullName>
        <inlineHelpText>Availability</inlineHelpText>
        <label>Reason 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Please_Select__c</fullName>
        <description>this is the default value on the reason select list - not an option to select - just the visible text.</description>
        <label>Reason Please Select</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Label used for responses in the case summary.</description>
        <inlineHelpText>Label used for responses in the case summary.</inlineHelpText>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Placeholder__c</fullName>
        <description>Search placeholder text</description>
        <label>Search Placeholder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Related__c</fullName>
        <description>Related articles label</description>
        <label>Search Related</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Results__c</fullName>
        <description>Search Results label</description>
        <label>Search Results</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Brand_Label__c</fullName>
        <label>Select Brand Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <description>Submit button label</description>
        <label>Submit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Exceeded_Limit__c</fullName>
        <label>Summary Exceeded Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Title_Chat_Live__c</fullName>
        <label>Tab Title Chat Live</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Title_Chat_Offline__c</fullName>
        <defaultValue>&quot;Chat Offline&quot;</defaultValue>
        <label>Tab Title Chat Offline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Title_Email_Us__c</fullName>
        <label>Tab Title Email Us</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Title_Join_the_Community__c</fullName>
        <label>Tab Title Join the Community</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Title_KB__c</fullName>
        <label>Tab Title KB</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Title_Outside_of_Business_Hours__c</fullName>
        <label>Tab Title Outside of Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <label>Terms and Conditions</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Case_Number__c</fullName>
        <description>&quot;Your case number is:&quot; text</description>
        <inlineHelpText>&quot;Your case number is:&quot; text</inlineHelpText>
        <label>Thank You Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Part_1__c</fullName>
        <description>Text before name on the email thank you page.</description>
        <inlineHelpText>Text before name on the email thank you page.</inlineHelpText>
        <label>Thank You Part 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Part_2__c</fullName>
        <description>Text after name on the email thank you page.</description>
        <inlineHelpText>Text after name on the email thank you page.</inlineHelpText>
        <label>Thank You Part 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Part_3__c</fullName>
        <description>&quot;Your email was received.&quot; text.</description>
        <inlineHelpText>&quot;Your email was received.&quot; text.</inlineHelpText>
        <label>Thank You Part 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Search_Articles__c</fullName>
        <description>&quot;Search All Articles&quot; Text</description>
        <inlineHelpText>&quot;Search All Articles&quot; Text</inlineHelpText>
        <label>Thank You Search Articles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>This_is_what_we_found__c</fullName>
        <inlineHelpText>Shows when search results come back</inlineHelpText>
        <label>This is what we found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toggle_False__c</fullName>
        <label>Toggle False</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toggle_True__c</fullName>
        <label>Toggle True</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_of_the_page_error_message__c</fullName>
        <label>Top of the page error message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Privacy_Policy__c</fullName>
        <description>Link to privacy policy in this language</description>
        <label>URL Privacy Policy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Terms_and_Conditions__c</fullName>
        <description>Link to terms and conditions in this language</description>
        <label>URL Terms and Conditions</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isLastNameFirst__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used on the ContactUs page to display the Last Name before the First Name</description>
        <label>Is Last Name First</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Us Language</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Page_Heading__c</columns>
        <columns>GCRLanguageIsoCode__c</columns>
        <columns>GCRCountryIsoCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Birthdate_Validation</fullName>
        <columns>NAME</columns>
        <columns>Language__c</columns>
        <columns>Birthdate_field_validation_error__c</columns>
        <columns>Accept_Terms_and_Conditions_Label_Part_1__c</columns>
        <columns>Accept_Terms_and_Conditions_Label_Part_2__c</columns>
        <columns>Accept_Terms_and_Conditions_Label_Part_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>Birthdate Validation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMEA</fullName>
        <booleanFilter>1 OR 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Language_Locale_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Austria,Denmark,Finland,France,Germany,Greece</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Belgium,Ireland,Netherlands,Norway,Portugal,Spain,Sweden,Switzerland</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Croatia,United Kingdom,Italy,Turkey,Poland,Russia,Ukraine,Israel,Hungary</value>
        </filters>
        <label>EMEA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>French</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Product_Search_Placeholder__c</columns>
        <columns>Contact_Us_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>French</value>
        </filters>
        <label>French</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LA_Spanish</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact_Us_Last_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Product_Search_Placeholder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Spanish</value>
        </filters>
        <label>LA Spanish</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contact Us Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Us Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>